istio-gateway-deployment-files/destinationrules/semoss-destinationrule-cookie.yaml
# ======================================================================
# Destination rule - Session affinity Cookie
# ======================================================================
# Purpose: DestinationRule configures how Istio routes traffic to the service, including session affinity.
# Ingress Rule Served:
#   - nginx.ingress.kubernetes.io/affinity: cookie
#   - nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
#   - nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
#   - nginx.ingress.kubernetes.io/session-cookie-name: semoss-istio-prod
#   - nginx.ingress.kubernetes.io/session-cookie-path: / 
#  
#
#
# Notes:
#   - Setting up the "consistentHash:" is the same as the "nginx.ingress.kubernetes.io/affinity" annotation
#   - httpCookie.name is the same as the "nginx.ingress.kubernetes.io/session-cookie-name" annotation
#   - httpCookie.path is the same as the "nginx.ingress.kubernetes.io/session-cookie-path" annotation
#   - ttl is the same as the "nginx.ingress.kubernetes.io/session-cookie-expires" annotation
#   - For istio,"nginx.ingress.kubernetes.io/session-cookie-expires" and "nginx.ingress.kubernetes.io/session-cookie-max-age" are the same
#   - The "nginx.ingress.kubernetes.io/proxy-cookie-path: ~^/. /" annotation doesnt seem to be needed by Istio
# ======================================================================
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: semoss-destinationrule-sessionaffinity
  namespace: semoss
spec:
  host: semoss-service.semoss.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: semoss-istio-prod
          path: /
          ttl: 48h # 172800s
